--- a/index.html
+++ b/index.html
@@ -940,13 +940,14 @@
             </div>
 
             <!-- Opponent Images -->
-            <div class="left opponent-image-area">
+            <div class="left opponent-image-area" id="select-opponent-image-area-1">
                 <img id="group-image-1" class="opponent-image" src="img/blank.png" alt="" hidden>
                 <div class="select-badge-bar">
                     <img id="group-new-badge-1" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
                     <img id="group-badge-1" class="badge-icon epilogue-badge" src="img/epilogue.svg"
-                        alt="SPNatI Epilogue available" data-toggle="tooltip" data-placement="right" data-container="#group-image-1" hidden />
+                         alt="SPNatI Epilogue available" data-toggle="tooltip"
+			 data-placement="right" data-container="#select-opponent-image-area-1" hidden />
                     <img id="group-costume-badge-1" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
                 </div>
@@ -957,13 +958,14 @@
                 <select id="group-costume-select-1" class="alt-costume-dropdown"
                     onchange="altCostumeSelected(1, true)"></select>
             </div>
-            <div class="halfLeft opponent-image-area">
+            <div class="halfLeft opponent-image-area" id="select-opponent-image-area-2">
                 <img id="group-image-2" class="opponent-image" src="img/blank.png" alt="" hidden>
                 <div class="select-badge-bar">
                     <img id="group-new-badge-2" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
                     <img id="group-badge-2" class="badge-icon epilogue-badge" src="img/epilogue.svg"
-                        alt="SPNatI Epilogue available" data-toggle="tooltip" data-placement="right" hidden />
+                         alt="SPNatI Epilogue available" data-toggle="tooltip"
+			 data-placement="right" data-container="#select-opponent-image-area-2" hidden />
                     <img id="group-costume-badge-2" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
                 </div>
@@ -974,13 +976,14 @@
                 <select id="group-costume-select-2" class="alt-costume-dropdown"
                     onchange="altCostumeSelected(2, true)"></select>
             </div>
-            <div class="halfRight opponent-image-area">
+            <div class="halfRight opponent-image-area" id="select-opponent-image-area-3">
                 <img id="group-image-3" class="opponent-image" src="img/blank.png" alt="" hidden>
                 <div class="select-badge-bar">
                     <img id="group-new-badge-3" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
                     <img id="group-badge-3" class="badge-icon epilogue-badge" src="img/epilogue.svg"
-                        alt="SPNatI Epilogue available" data-toggle="tooltip" data-placement="right" hidden />
+                         alt="SPNatI Epilogue available" data-toggle="tooltip"
+			 data-placement="right" data-container="#select-opponent-image-area-3" hidden />
                     <img id="group-costume-badge-3" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
                 </div>
@@ -991,13 +994,14 @@
                 <select id="group-costume-select-3" class="alt-costume-dropdown"
                     onchange="altCostumeSelected(3, true)"></select>
             </div>
-            <div class="right opponent-image-area">
+            <div class="right opponent-image-area" id="select-opponent-image-area-4">
                 <img id="group-image-4" class="opponent-image" src="img/blank.png" alt="" hidden>
                 <div class="select-badge-bar">
                     <img id="group-new-badge-4" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
                     <img id="group-badge-4" class="badge-icon epilogue-badge" src="img/epilogue.svg"
-                        alt="SPNatI Epilogue available" data-toggle="tooltip" data-placement="right" hidden />
+                         alt="SPNatI Epilogue available" data-toggle="tooltip"
+			 data-placement="right" data-container="#select-opponent-image-area-4" hidden />
                     <img id="group-costume-badge-4" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
                 </div>
