New "New!" style for prefill suggestions. Don't show costume badges anywhere except the individual select screen; show costume selectors on the main selection screen. Don't show status icons on the main selection screen.
In summary, we're down to "New!" for individual selection cards and prefill selections, costume badges for individual selection cards, status icons on group and individual selection screens, and gender, layers, and epilogue badges/icons everywhere (except the Suggested characters quads).

--- a/index.html
+++ b/index.html
@@ -314,22 +314,22 @@
         <div class="screen">
 
             <div id="selection-badge-row-1" class="left selection-badge-row">
-                <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
+                <img data-badge="new" class="badge-icon" src="img/new-star.svg" alt="New character" style="display:none;"/>
                 <img data-badge="epilogue" class="badge-icon epilogue-badge" src="img/epilogue.svg" alt="SPNatI Epilogue available" style="display:none;"/>
                 <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
             </div>
             <div id="selection-badge-row-2" class="halfLeft selection-badge-row">
-                <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
+                <img data-badge="new" class="badge-icon" src="img/new-star.svg" alt="New character" style="display:none;"/>
                 <img data-badge="epilogue" class="badge-icon epilogue-badge" src="img/epilogue.svg" alt="SPNatI Epilogue available" style="display:none;"/>
                 <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
             </div>
             <div id="selection-badge-row-3" class="halfRight selection-badge-row">
-                <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
+                <img data-badge="new" class="badge-icon" src="img/new-star.svg" alt="New character" style="display:none;"/>
                 <img data-badge="epilogue" class="badge-icon epilogue-badge" src="img/epilogue.svg" alt="SPNatI Epilogue available" style="display:none;"/>
                 <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
             </div>
             <div id="selection-badge-row-4" class="right selection-badge-row">
-                <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
+                <img data-badge="new" class="badge-icon" src="img/new-star.svg" alt="New character" style="display:none;"/>
                 <img data-badge="epilogue" class="badge-icon epilogue-badge" src="img/epilogue.svg" alt="SPNatI Epilogue available" style="display:none;"/>
                 <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
             </div>
@@ -363,6 +363,7 @@
                 <img id="select-gender-1" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <img id="select-status-1" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
+                <select id="main-costume-select-1" class="alt-costume-dropdown"></select>
                 <div id="opponent-suggestions-1" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -405,6 +406,7 @@
                 <img id="select-gender-2" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <img id="select-status-2" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
+                <select id="main-costume-select-2" class="alt-costume-dropdown"></select>
                 <div id="opponent-suggestions-2" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -447,6 +449,7 @@
                 <img id="select-gender-3" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <img id="select-status-3" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
+                <select id="main-costume-select-3" class="alt-costume-dropdown"></select>
                 <div id="opponent-suggestions-3" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -489,6 +492,7 @@
                 <img id="select-gender-4" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <img id="select-status-4" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
+                <select id="main-costume-select-4" class="alt-costume-dropdown"></select>
                 <div id="opponent-suggestions-4" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
