Colour the alt costume dropdowns, move the ones on the main selection screen into the opponent areas, and move the ones on the group selection screen up so they don't get obscured when there's a suggested background, and also into the table element so they get hidden when you click the hide table button.

--- a/index.html
+++ b/index.html
@@ -363,7 +363,6 @@
                 <img id="select-gender-1" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <img id="select-status-1" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
-                <select id="main-costume-select-1" class="alt-costume-dropdown"></select>
                 <div id="opponent-suggestions-1" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -406,7 +405,6 @@
                 <img id="select-gender-2" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <img id="select-status-2" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
-                <select id="main-costume-select-2" class="alt-costume-dropdown"></select>
                 <div id="opponent-suggestions-2" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -449,7 +447,6 @@
                 <img id="select-gender-3" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <img id="select-status-3" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
-                <select id="main-costume-select-3" class="alt-costume-dropdown"></select>
                 <div id="opponent-suggestions-3" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -492,7 +489,6 @@
                 <img id="select-gender-4" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <img id="select-status-4" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
-                <select id="main-costume-select-4" class="alt-costume-dropdown"></select>
                 <div id="opponent-suggestions-4" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -534,24 +530,28 @@
 
                 <!-- Opponent Selections -->
                 <div class="bordered left opponent-area">
+                    <select id="main-costume-select-1" class="bordered alt-costume-dropdown"></select>
                     <div id="select-name-label-1" class="bordered name-label">Opponent 1</div>
                     <button id="select-prefill-button-1" class="bordered smooth-button blue prefill-select-button" style="display: none;">Select Suggested</button>
                     <button id="select-slot-button-1" class="bordered smooth-button green select-slot-button"
                         onclick="selectOpponentSlot(1)">Select Opponent</button>
                 </div>
                 <div class="bordered halfLeft opponent-area">
+                    <select id="main-costume-select-2" class="bordered alt-costume-dropdown"></select>
                     <div id="select-name-label-2" class="bordered name-label">Opponent 2</div>
                     <button id="select-prefill-button-2" class="bordered smooth-button blue prefill-select-button" style="display: none;">Select Suggested</button>
                     <button id="select-slot-button-2" class="bordered smooth-button green select-slot-button"
                         onclick="selectOpponentSlot(2)">Select Opponent</button>
                 </div>
                 <div class="bordered halfRight opponent-area">
+                    <select id="main-costume-select-3" class="bordered alt-costume-dropdown"></select>
                     <div id="select-name-label-3" class="bordered name-label">Opponent 3</div>
                     <button id="select-prefill-button-3" class="bordered smooth-button blue prefill-select-button" style="display: none;">Select Suggested</button>
                     <button id="select-slot-button-3" class="bordered smooth-button green select-slot-button"
                         onclick="selectOpponentSlot(3)">Select Opponent</button>
                 </div>
                 <div class="bordered right opponent-area">
+                    <select id="main-costume-select-4" class="bordered alt-costume-dropdown"></select>
                     <div id="select-name-label-4" class="bordered name-label">Opponent 4</div>
                     <button id="select-prefill-button-4" class="bordered smooth-button blue prefill-select-button" style="display: none;">Select Suggested</button>
                     <button id="select-slot-button-4" class="bordered smooth-button green select-slot-button"
@@ -719,7 +719,7 @@
                     <div class="opponent-details-view opponent-details-basic show-more">
                         <div class="opponent-options-row">
                             <button type="button" class="bordered smooth-button blue show-more-button">Show </button>
-                            <select class="form-control opponent-costume-select"></select>
+                            <select class="bordered alt-costume-dropdown"></select>
                         </div>
                         <div class="bordered opponent-details-field opponent-details-name">
                             <div class="opponent-details-value opponent-full-name"></div>
@@ -959,8 +959,6 @@
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-1" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
                 <img id="group-gender-1" class="gender-icon" src="img/female.png" alt="Female" hidden />
-                <select id="group-costume-select-1" class="alt-costume-dropdown"
-                    onchange="altCostumeSelected(1, true)"></select>
             </div>
             <div class="halfLeft opponent-image-area" id="select-opponent-image-area-2">
                 <img id="group-image-2" class="opponent-image" src="img/blank.png" alt="" hidden>
@@ -977,8 +975,6 @@
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-2" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
                 <img id="group-gender-2" class="gender-icon" src="img/female.png" alt="Female" hidden />
-                <select id="group-costume-select-2" class="alt-costume-dropdown"
-                    onchange="altCostumeSelected(2, true)"></select>
             </div>
             <div class="halfRight opponent-image-area" id="select-opponent-image-area-3">
                 <img id="group-image-3" class="opponent-image" src="img/blank.png" alt="" hidden>
@@ -995,8 +991,6 @@
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-3" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
                 <img id="group-gender-3" class="gender-icon" src="img/female.png" alt="Female" hidden />
-                <select id="group-costume-select-3" class="alt-costume-dropdown"
-                    onchange="altCostumeSelected(3, true)"></select>
             </div>
             <div class="right opponent-image-area" id="select-opponent-image-area-4">
                 <img id="group-image-4" class="opponent-image" src="img/blank.png" alt="" hidden>
@@ -1013,8 +1007,6 @@
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-4" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
                 <img id="group-gender-4" class="gender-icon" src="img/female.png" alt="Female" hidden />
-                <select id="group-costume-select-4" class="alt-costume-dropdown"
-                    onchange="altCostumeSelected(4, true)"></select>
             </div>
 
             <button id="group-hide-button" class="bordered hide-table-button" onclick="hideGroupSelectionTable()">
@@ -1024,6 +1016,15 @@
             <!-- Dock Area -->
             <div id="group-select-table" class="select-table">
 
+                <select id="group-costume-select-1" class="bordered left alt-costume-dropdown"
+                    onchange="altCostumeSelected(1, true)"></select>
+                <select id="group-costume-select-2" class="bordered halfLeft alt-costume-dropdown"
+                    onchange="altCostumeSelected(2, true)"></select>
+                <select id="group-costume-select-3" class="bordered halfRight alt-costume-dropdown"
+                    onchange="altCostumeSelected(3, true)"></select>
+                <select id="group-costume-select-4" class="bordered right alt-costume-dropdown"
+                    onchange="altCostumeSelected(4, true)"></select>
+	      
                 <!-- Opponent Selections -->
                 <div id="group-select-area" class="bordered opponent-area">
                     <div class="group-dock-button-row">
