various enhancements + fixes

--- a/editor source/SPNATI Character Editor/Help/endings.html
+++ b/editor source/SPNATI Character Editor/Help/endings.html
@@ -298,7 +298,7 @@
             <ul>
                 <li><span class="label">Clamp</span> Upon reaching the end of the animation, it won't move any further. Since looping animations do not stop when the user advances through a "Wait for Input" directive, you could use a clamped looping function to make a one-time animation persist through multiple text boxes.</li>
                 <li><span class="label">Wrap</span> Upon reaching the end of the animation, it starts over, jumping back immediately to its initial value.</li>
-                <li><span class="label">Mirror</span> Upon reaching the end of the animation, it repeats in the reverse direction until reaching the start, continuining back and forth.</li>
+                <li><span class="label">Mirror</span> Upon reaching the end of the animation, it repeats in the reverse direction until reaching the start, continuing back and forth.</li>
             </ul>
         </section>
         <section class="card" id="emitters">
