--- a/editor source/SPNATI Character Editor/Help/macros.html
+++ b/editor source/SPNATI Character Editor/Help/macros.html
@@ -21,7 +21,7 @@
                 <li>To open the Macro Manager, go to Tools > Manage Macros...</li>
                 <li>You are greeted with a form containing a list of existing macros and buttons to edit, create, or delete a macro.</li>
                 <li>Click "New"</li>
-                <li>If this is your first time, you'll see a popup explaning what macros are. Otherwise, you'll be taken to the macro editor.</li>
+                <li>If this is your first time, you'll see a popup explaining what macros are. Otherwise, you'll be taken to the macro editor.</li>
             </ol>
         </section>
         <section class="card">
