importer swap to TcpClient
All that work and it's not even any faster :(

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.8.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.8.html
@@ -14,6 +14,11 @@
 <ul>
 	<li>If you use the Collapse All button, the next time you open an epilogue, the scenes will start collapsed. The opposite applies when using the Expand All button.</li>
 </ul>
+<h3>KKL Interface</h3>
+<ul>
+	<li>Swapped out the image importing engine to use KKL's <a href="https://spnati.net/docs/kkl/kkl_local_protocol.html" target="_blank">Remote Control Protocol</a>. This doesn't offer any immediately obvious benefits like faster imports or hiding the export window, but it opens the door in the future for more advanced communication between the editor and KKL.</li>
+	<li>If this causes problems with imports, you can switch back to the old importer using Settings > Image Import > Import images = "Legacy".</li>
+</ul>
 <h3>Pose Matrix</h3>
 <ul>
 	<li>When adding a new sheet, it's now possible to mark it as "stage-independent." These sheets contain only one row and images created in them will not contain a stage prefix. This is most useful for images that can be used in more than one stage or for creating epilogue or pose maker assets.</li>
