a few bug fixes

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.8.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.8.html
@@ -18,6 +18,7 @@
 <ul>
 	<li>Swapped out the image importing engine to use KKL's <a href="https://spnati.net/docs/kkl/kkl_local_protocol.html" target="_blank">Remote Control Protocol</a>. This doesn't offer any immediately obvious benefits like faster imports or hiding the export window, but it opens the door in the future for more advanced communication between the editor and KKL.</li>
 	<li>If this causes problems with imports, you can switch back to the old importer using Settings > Image Import > Import images = "Legacy".</li>
+	<li>Added transparency sliders for thighs, lower legs, and feet.</li>
 </ul>
 <h3>Pose Matrix</h3>
 <ul>
@@ -45,4 +46,8 @@
 	<li>Fixed "Per Target" checkbox not matching the theme.</li>
 	<li>The validator no longer complains about unused images for images that are only used in the selection screen portrait.</li>
 	<li>Unrecognized characters are no longer blanked out in filters.</li>
+	<li>Fixed eye transparency sliders.</li>
+	<li>Fixed partial part transparencies in recent KKL versions.</li>
+	<li>Fixed Outgoing and Incoming target charts to account for the new targeting format.</li>
+	<li>Fixed Pose Matrix issue where exporting a lineup when only the first stage has a code would only import that stage's model.</li>
 </ul>
