avoid hangs when closing kkl before editor

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.8.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.8.html
@@ -26,6 +26,8 @@
 	<li>When converting a pose list to a sheet, any poses in the list that have no stage will now be added to a stage-independent sheet labeled "Global" instead of being discarded.</li>
 	<li>Added the ability to set part transparencies.</li>
 	<li>Added a button to create a pose list from a sheet.</li>
+	<li>If your character has fewer than 7 layers, exporting and importing lineups will now include the masturbating and finished stages.</li>
+	<li>Exporting a lineup using stage codes will now use the previous stage's clothing code if one is defined, similar to the pose codes.</li>
 </ul>
 <h3>Writing Aid</h3>
 <ul>
