Find replace codes, wrapping up 5.8

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.8.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.8.html
@@ -28,6 +28,8 @@
 	<li>Added a button to create a pose list from a sheet.</li>
 	<li>If your character has fewer than 7 layers, exporting and importing lineups will now include the masturbating and finished stages.</li>
 	<li>Exporting a lineup using stage codes will now use the previous stage's clothing code if one is defined, similar to the pose codes.</li>
+	<li>Added an "Imported Selected" button to import images for all selected cells.</li>
+	<li>Added Find/Replace support (Ctrl+H) for changing text across a code or an entire sheet (ex. to replace the color 23AB23 everywhere to 17A7E2).</li>
 </ul>
 <h3>Writing Aid</h3>
 <ul>
@@ -52,4 +54,5 @@
 	<li>Fixed partial part transparencies in recent KKL versions.</li>
 	<li>Fixed Outgoing and Incoming target charts to account for the new targeting format.</li>
 	<li>Fixed Pose Matrix issue where exporting a lineup when only the first stage has a code would only import that stage's model.</li>
+	<li>Fixed the Help files describing how to set a nickname to match the current UI.</li>
 </ul>
