Selection: make view toggling explicit

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                         Back
                     </button>
                     <button id='select-group-testing-button' class='bordered main-select-button smooth-button green'
-                        onclick="showTestingTables()">
+                        onclick="toggleIndividualSelectView()">
                         Testing Tables
                     </button>
                     <button id='select-group-button' class='bordered main-select-button smooth-button green'
