Minor cleanup related to last commit

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                     </button>
                     <button id='select-group-testing-button' class='bordered main-select-button smooth-button green'
                         onclick="toggleIndividualSelectView()">
-                        Testing Tables
+                        Testing Roster
                     </button>
                     <button id='select-group-button' class='bordered main-select-button smooth-button green'
                         onclick="showPresetTables()">
