Selection: add Last Updated sort mode and Sponsorship highlighting

--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@
                         </button>
                         <ul class="dropdown-menu sort-dropdown-options">
                             <li><a href="#" data-value="roster">Featured</a></li>
+                            <li><a href="#" data-value="updated-reverse">Recently Updated</a></li>
                             <li><a href="#" data-value="date">Newest</a></li>
                             <li><a href="#" data-value="date-reverse">Oldest</a></li>
                             <li><a href="#" data-value="layers">Most Layers</a></li>
