various fixes + requests

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.10.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.10.html
@@ -4,7 +4,31 @@
 	<li>Use the left and right arrows to switch between graphs.</li>
 </ul>
 
+<h3>Pose Matrix</h3>
+<ul>
+	<li>Wetness and labia position can now be applied to individual poses across stages.</li>
+</ul>
+
+<h3>General</h3>
+<ul>
+	<li>Characters with statuses that are marked to hide under the "Characters to hide" setting will no longer appear as suggestions in the Checklist dashboard, the Banter Wizard, or the Writing Aid.</li>
+</ul>
+
+<h3>Character Skins</h3>
+<ul>
+	<li>When creating a new alternate outfit, the format <i>character_skin</i> will now be enforced. This makes sorting easier when browsing the opponent/reskins folder.</li>
+	<li>When creating a new alternate outfit, the editor will now auto-select the character to link the outfit to based on the name of the skin.</li>
+</ul>
+
+<h3>Validator</h3>
+<ul>
+	<li>Uncountable nouns for clothing like "armor" and "jewelry" are now flagged because they don't pluralize well when writing generic dialogue.</li>
+</ul>
+
 <h3>Bug Fixes</h3>
 <ul>
 	<li>Fixed crash when closing a character while the Find/Replace popup is open, and then attempting to use the popup.</li>
+	<li>Fixed various crashes that would occur on the Dashboard and Validator tabs when a Pose Maker pose contains a sprite with no source.</li>
+	<li>Fixed issue where creating a response to an "Opponent Selected" case where you are the target would create an "Opponent Selected" case instead of "Selected."</li>
+	<li>"Online" now appears as an option for epilogue status. This is the same as leaving it blank, but that wasn't obvious.</li>
 </ul>
