Additional pre-resort prep

--- a/index.html
+++ b/index.html
@@ -1881,7 +1881,7 @@
                             </div>
                             <div class="modal-body">
                                 <h4>
-                                    The Winter 2019 Roster Re-Sort is now live!
+                                    The Summer 2020 Roster Re-Sort is now live!
                                 </h4>
                                 <p>
                                     This re-sort poll will help determine the order of characters on the main selection
@@ -1897,7 +1897,7 @@
                                 <a class="bordered smooth-button green resort-link-button"
                                     target="_blank" href="https://old.reddit.com/r/spnati/comments/egnhr3/resort_ix_the_rise_of_resort/"
                                     target="_blank" rel="noreferrer">Roster
-                                    Re-Sort Poll 9</a>
+                                    Re-Sort Poll 10</a>
                             </div>
                             <div class="modal-footer">
                                 <button class="bordered smooth-button modal-button" data-dismiss="modal">Close</button>
