Vote and Tear Until it Is Done

--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
                     onchange="altCostumeSelected(3, true)"></select>
                 <select id="group-costume-select-4" class="bordered right alt-costume-dropdown"
                     onchange="altCostumeSelected(4, true)"></select>
-	      
+
                 <!-- Opponent Selections -->
                 <div id="group-select-area" class="bordered opponent-area">
                     <div class="group-dock-button-row">
@@ -1895,7 +1895,7 @@
                                     You can vote in the Re-Sort Poll here:
                                 </p>
                                 <a class="bordered smooth-button green resort-link-button"
-                                    target="_blank" href="https://old.reddit.com/r/spnati/comments/egnhr3/resort_ix_the_rise_of_resort/"
+                                    target="_blank" href="forms.gle/t9zCBuRW6PYP5uc29"
                                     target="_blank" rel="noreferrer">Roster
                                     Re-Sort Poll 10</a>
                             </div>
