--- a/editor source/SPNATI Character Editor/VersionHistory/v5.10.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.10.html
@@ -31,4 +31,8 @@
 	<li>Fixed various crashes that would occur on the Dashboard and Validator tabs when a Pose Maker pose contains a sprite with no source.</li>
 	<li>Fixed issue where creating a response to an "Opponent Selected" case where you are the target would create an "Opponent Selected" case instead of "Selected."</li>
 	<li>"Online" now appears as an option for epilogue status. This is the same as leaving it blank, but that wasn't obvious.</li>
+	<li>Fixed issue where required markers on an epilogue would duplicate when switching between epilogues on the same character.</li>
+	<li>Fixed issue where required markers on an epilogue would transfer to a new epilogue when creating a new one.</li>
+	<li>Fixed issue where the "Daily Goal Met" notification would appear repeatedly at certain times of the day.</li>
+	<li>Made Spell Check smarter about what it considers to be a word.</li>
 </ul>
