The Only Thing that Votes is You

--- a/index.html
+++ b/index.html
@@ -1895,7 +1895,7 @@
                                     You can vote in the Re-Sort Poll here:
                                 </p>
                                 <a class="bordered smooth-button green resort-link-button"
-                                    target="_blank" href="forms.gle/t9zCBuRW6PYP5uc29"
+                                    target="_blank" href="https://forms.gle/t9zCBuRW6PYP5uc29"
                                     target="_blank" rel="noreferrer">Roster
                                     Re-Sort Poll 10</a>
                             </div>
