Add Resort Poll button to Warning/Title screen

--- a/index.html
+++ b/index.html
@@ -289,6 +289,10 @@
 		    onclick="toggleFullscreen()">
                 <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
             </button>
+            <button class="title-resort-button bordered smooth-button red banner-flair"
+		    onclick="showResortModal()" style="display:none">
+                Resort Poll
+            </button>
 
             <button id="title-version-button" class="bordered smooth-button red banner-flair version-button">
                 <span class="substitute-version">Unknown Version</span><br>
