Add link to Web Server for Chrome extension to the broken offline modal

--- a/index.html
+++ b/index.html
@@ -2669,9 +2669,12 @@
                                         <ul>
                                             <li>Try running the game using the provided <code>start-offline</code>
                                                 program, located in the SPNATI directory.</li>
-                                            <li>Alternatively, follow the instructions from <a
+                                            <li>If you're on Firefox, you can alternatively follow the instructions from <a
                                                     target="_blank" href="https://old.reddit.com/r/spnati/comments/cd7h0f/possible_firefox_68_workaround_without_hosting/">this
                                                     post on Reddit.</a>
+                                            </li>
+                                            <li>If you're on Chrome, try using this extension: 
+                                                <a target="_blank" href="https://chrome.google.com/webstore/detail/web-server-for-chrome/ofhbbkphhbklhfoeikjpcbhemlocgigb">Web Server for Chrome</a>
                                             </li>
                                         </ul>
                                     </div>
