reviving epilogue timeline system

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.10.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.10.html
@@ -4,6 +4,21 @@
 	<li>Use the left and right arrows to switch between graphs.</li>
 </ul>
 
+<h3>Epilogues</h3>
+<ul>
+	<li>The epilogue editor has received a complete overhaul to make it more similar sequencers found in other software (including the Pose Maker in this software).</li>
+	<li>A tutorial has been added to the spnati_edit YouTube channel.</li>
+</ul>
+
+<h3>Pose Maker</h3>
+<ul>
+	<li>It's now possible to split a keyframe by dragging it while holding Ctrl.</li>
+	<li>Changed how the blocks of keyframes are displayed when splits are in use.</li>
+	<li>These features also apply to the Epilogue Editor.</li>
+	<li>Added buttons for changing a keyframe type instead of cycling through them.</li>
+	<li>Adjusted the colors across various themes.</li>
+</ul>
+
 <h3>Pose Matrix</h3>
 <ul>
 	<li>Wetness and labia position can now be applied to individual poses across stages.</li>
@@ -12,6 +27,7 @@
 <h3>General</h3>
 <ul>
 	<li>Characters with statuses that are marked to hide under the "Characters to hide" setting will no longer appear as suggestions in the Checklist dashboard, the Banter Wizard, or the Writing Aid.</li>
+	<li>Desaturated the Mandevilla theme.</li>
 </ul>
 
 <h3>Character Skins</h3>
@@ -35,4 +51,11 @@
 	<li>Fixed issue where required markers on an epilogue would transfer to a new epilogue when creating a new one.</li>
 	<li>Fixed issue where the "Daily Goal Met" notification would appear repeatedly at certain times of the day.</li>
 	<li>Made Spell Check smarter about what it considers to be a word.</li>
+	<li>Fixed massive lag when opening an epilogue.</li>
+	<li>Speech bubble font size and padding in epilogues now scale to the camera like they have in game for a long time now. This should make it much easier to position bubbles, though they still won't be 1:1 with the game.</li>
+	<li>Fixed the skinning of preview fields (X, Y, source, etc.) when clicking between frames in the Pose Maker and Epilogue Editor.</li>
+	<li>Improved contrast of colors in the Pose Maker for the dark themes.</li>
+	<li>Fixed invisible tick marks in the Pose Maker in the Mandevilla theme.</li>
+	<li>Dragging a snap will now snap it to the grid as opposed to snapping in grid increments from the initial point.</li>
+	<li>Performance optimizations to the pose maker when there are lots of objects in the timeline.</li>
 </ul>
