--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </button>
             <button class="title-resort-button bordered smooth-button red banner-flair"
 		    onclick="showResortModal()" style="display:none">
-                Resort Poll
+                Poll
             </button>
 
             <button id="title-version-button" class="bordered smooth-button red banner-flair version-button">
@@ -1881,27 +1881,30 @@
                         <!-- Start of Modal Content -->
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h3 class="modal-title text-center"><b>Character Re-Sort</b></h3>
+                                <h3 class="modal-title text-center"><b>Character Feedback</b></h3>
                             </div>
                             <div class="modal-body">
                                 <h4>
-                                    The Summer 2020 Roster Re-Sort is now live!
+                                    A SPNatI Character Feedback Poll is now live!
                                 </h4>
                                 <p>
-                                    This re-sort poll will help determine the order of characters on the main selection
-                                    screen for the next few months. Higher-voted characters will be placed closer to the
-                                    top of the roster!
+                                    A feedback poll for Strip Poker Night at the Inventory is now live, and we seek
+                                    your feedback on as many characters as you'd like to comment on. You can find
+                                    the poll via link below.
                                 </p>
                                 <p>
-                                    Now is your chance to help your favorite characters rise to prominence!
+                                    We know that many people play this game without interacting with us on the
+                                    /r/spnati subreddit or on either Discord server. So think of this as a way to
+                                    let your voice be heard. Many of the people who volunteer their time to bring
+                                    you this game will read your answers.
                                 </p>
                                 <p>
-                                    You can vote in the Re-Sort Poll here:
+                                    You can find a link to the poll on our subreddit here:
                                 </p>
                                 <a class="bordered smooth-button green resort-link-button"
-                                    target="_blank" href="https://forms.gle/t9zCBuRW6PYP5uc29"
-                                    target="_blank" rel="noreferrer">Roster
-                                    Re-Sort Poll 10</a>
+                                    target="_blank" href="https://old.reddit.com/r/spnati/comments/hocqda/spnati_character_feedback_poll_july_2020/"
+                                    target="_blank" rel="noreferrer">
+                                    more information</a>
                             </div>
                             <div class="modal-footer">
                                 <button class="bordered smooth-button modal-button" data-dismiss="modal">Close</button>
